discussion/kv_engine/186420/186420_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55467: Dump stringyfied flags at AS::markDiskSnapshot()

Change-Id: Id762d0f459cce7a562f169e7a01c5d020410c8de

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2023-02-08 14:51:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-08 14:51:52.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/336894/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-08 15:17:48.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1052/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:20:13: error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
std::string dcpMarkerFlagsToString(uint32_t dcpMarkerFlags) {
            ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stringfwd.h:74:11: note: template is declared here
    class basic_string;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:21:23: error: implicit instantiation of undefined template "std::__cxx11::basic_stringstream<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
    std::stringstream ss;
                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/iosfwd:108:11: note: template is declared here
    class basic_stringstream;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:41:23: error: incomplete type "std::ios_base" named in nested name specifier [clang-diagnostic-error]
    ss.seekg(-1, std::ios_base::end);
                      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/iosfwd:74:9: note: forward declaration of "std::ios_base"
  class ios_base;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:43:27: error: incomplete type "std::ios_base" named in nested name specifier [clang-diagnostic-error]
        ss.seekp(-1, std::ios_base::end);
                          ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/iosfwd:74:9: note: forward declaration of "std::ios_base"
  class ios_base;
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1052/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:20:13:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1052/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1265/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [85/160]: vbucket replace (dead)...E0208 07:03:59.476619 58088 NotificationQueue.h:555] [NotificationQueue] Unexpected state while draining signals: signal_=1 bytes_read=0
(21 ms) OK


99% tests passed, 1 tests failed out of 430

Total Test time (real) = 682.96 sec

The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1265/ )

Timeout of a CTest test 430/430 Test #283: ep_testsuite.ephemeral.comp_passive ...........................................................................................} ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1265/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1022/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/dcp-types.cc:20:13:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1022/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1068/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1068/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1077/ : FAILURE

ThreadSanitizer issue: heap-use-after-free ../kv_engine/engines/ep/src/dcp/response.h:412 in SnapshotMarker::getFlags() const  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1077/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1382/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1382/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22574/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1077/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1045/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1069/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1074/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
